--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "prompt = f\"\"\"\n",
-    "Dado que\n",
+    "Dado que eres un experto en literatura \n",
     "\"\"\""
    ]
   },
