historia interactiva funcionando

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -283,86 +283,24 @@
    "execution_count": null,
    "id": "d03b5555",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 4) (1893964636.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[31]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m\"historia\": \"El viento gélido azotaba el Cañón de los Lamentos, silbando entre las grietas de las rocas negras como el carbón. Sobre el único puente que cruzaba el abismo, un puente de piedra erosionada y vetas de obsidiana, se enfrentaban dos figuras. Abraham, el Maravilloso Caballero de la Legión de Guerreros de las Sombras, su armadura plateada reflejando la escasa luz, y el Gran Lord Voldemonda, líder de los Elfos Oscuros, su cuerpo envuelto en sombras y sus ojos rojos brillando con furia contenida.\u001b[39m\n                ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = \"\"\"```json\n",
-    "{\n",
-    "\"titulo\": \"El Último Puente de Vergamota\",\n",
-    "\"historia\": \"El viento gélido azotaba el Cañón de los Lamentos, silbando entre las grietas de las rocas negras como el carbón. Sobre el único puente que cruzaba el abismo, un puente de piedra erosionada y vetas de obsidiana, se enfrentaban dos figuras. Abraham, el Maravilloso Caballero de la Legión de Guerreros de las Sombras, su armadura plateada reflejando la escasa luz, y el Gran Lord Voldemonda, líder de los Elfos Oscuros, su cuerpo envuelto en sombras y sus ojos rojos brillando con furia contenida.\n",
-    "\n",
-    "El destino del reino de Vergamota se decidía en ese preciso instante. Voldemonda, con un movimiento de su mano huesuda, conjuró una lanza de energía oscura que se estrelló contra el escudo de Abraham, creando una onda expansiva que hizo temblar el puente. Abraham respondió con una estocada precisa, su espada de energía cortando el aire con un zumbido mortal. Voldemonda esquivó el ataque con una agilidad inhumana y contraatacó con una ráfaga de proyectiles oscuros.\n",
-    "\n",
-    "La batalla se prolongó durante horas, cada choque de espadas, cada hechizo lanzado, desgarraba un poco más la ya frágil estructura del puente. Abraham, a pesar de su valentía, comenzaba a flaquear. La magia oscura de Voldemonda drenaba sus fuerzas, mientras que el líder de los elfos parecía inagotable.\n",
-    "\n",
-    "Finalmente, con una sonrisa cruel en su rostro, Voldemonda lanzó un hechizo devastador. Un rayo de energía negra impactó de lleno en el pecho de Abraham, lanzándolo hacia atrás. El caballero se aferró al borde del puente, sus dedos arañando la piedra mientras la oscuridad lo envolvía. Voldemonda se acercó, su voz un susurro gutural: “Vergamota es mía”. Con una patada brutal, envió a Abraham al abismo. El grito del caballero se perdió en el viento, mientras el puente, símbolo de la resistencia de Vergamota, se quebraba y se desmoronaba.\"\n",
-    "}\n",
-    "```\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "ed7fe9fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"titulo\": \"El Último Puente de Vergamota\",\"historia\": \"El viento gélido azotaba el Cañón de los Lamentos, silbando entre las grietas de las rocas negras como el carbón. Sobre el único puente que cruzaba el abismo, un puente de piedra erosionada y vetas de obsidiana, se enfrentaban dos figuras. Abraham, el Maravilloso Caballero de la Legión de Guerreros de las Sombras, su armadura plateada reflejando la escasa luz, y el Gran Lord Voldemonda, líder de los Elfos Oscuros, su cuerpo envuelto en sombras y sus ojos rojos brillando con furia contenida.El destino del reino de Vergamota se decidía en ese preciso instante. Voldemonda, con un movimiento de su mano huesuda, conjuró una lanza de energía oscura que se estrelló contra el escudo de Abraham, creando una onda expansiva que hizo temblar el puente. Abraham respondió con una estocada precisa, su espada de energía cortando el aire con un zumbido mortal. Voldemonda esquivó el ataque con una agilidad inhumana y contraatacó con una ráfaga de proyectiles oscuros.La batalla se prolongó durante horas, cada choque de espadas, cada hechizo lanzado, desgarraba un poco más la ya frágil estructura del puente. Abraham, a pesar de su valentía, comenzaba a flaquear. La magia oscura de Voldemonda drenaba sus fuerzas, mientras que el líder de los elfos parecía inagotable.Finalmente, con una sonrisa cruel en su rostro, Voldemonda lanzó un hechizo devastador. Un rayo de energía negra impactó de lleno en el pecho de Abraham, lanzándolo hacia atrás. El caballero se aferró al borde del puente, sus dedos arañando la piedra mientras la oscuridad lo envolvía. Voldemonda se acercó, su voz un susurro gutural: “Vergamota es mía\". Con una patada brutal, envió a Abraham al abismo. El grito del caballero se perdió en el viento, mientras el puente, símbolo de la resistencia de Vergamota, se quebraba y se desmoronaba.\"}'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = cleanTextLLM(str(a))\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "d711f6c0",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "549b747a",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "JSONDecodeError",
-     "evalue": "Expecting ',' delimiter: line 1 column 1676 (char 1675)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mJSONDecodeError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m dfLLM_Texto = \u001b[43mjson\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\json\\__init__.py:346\u001b[39m, in \u001b[36mloads\u001b[39m\u001b[34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[39m\n\u001b[32m    341\u001b[39m     s = s.decode(detect_encoding(s), \u001b[33m'\u001b[39m\u001b[33msurrogatepass\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m    343\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    344\u001b[39m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    345\u001b[39m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[32m--> \u001b[39m\u001b[32m346\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    347\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    348\u001b[39m     \u001b[38;5;28mcls\u001b[39m = JSONDecoder\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\json\\decoder.py:337\u001b[39m, in \u001b[36mJSONDecoder.decode\u001b[39m\u001b[34m(self, s, _w)\u001b[39m\n\u001b[32m    332\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, s, _w=WHITESPACE.match):\n\u001b[32m    333\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[32m    334\u001b[39m \u001b[33;03m    containing a JSON document).\u001b[39;00m\n\u001b[32m    335\u001b[39m \n\u001b[32m    336\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m337\u001b[39m     obj, end = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[43m=\u001b[49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    338\u001b[39m     end = _w(s, end).end()\n\u001b[32m    339\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m end != \u001b[38;5;28mlen\u001b[39m(s):\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\json\\decoder.py:353\u001b[39m, in \u001b[36mJSONDecoder.raw_decode\u001b[39m\u001b[34m(self, s, idx)\u001b[39m\n\u001b[32m    344\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Decode a JSON document from ``s`` (a ``str`` beginning with\u001b[39;00m\n\u001b[32m    345\u001b[39m \u001b[33;03ma JSON document) and return a 2-tuple of the Python\u001b[39;00m\n\u001b[32m    346\u001b[39m \u001b[33;03mrepresentation and the index in ``s`` where the document ended.\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    350\u001b[39m \n\u001b[32m    351\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    352\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m353\u001b[39m     obj, end = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mscan_once\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    354\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m    355\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[33m\"\u001b[39m\u001b[33mExpecting value\u001b[39m\u001b[33m\"\u001b[39m, s, err.value) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[31mJSONDecodeError\u001b[39m: Expecting ',' delimiter: line 1 column 1676 (char 1675)"
-     ]
-    }
-   ],
-   "source": [
-    "dfLLM_Texto = json.loads(a)"
+    "prompt_interactivo = \"\"\"Dado que eres un experto en literatura y creación de historias, quiero que crees una historia interactiva en la que debes abrir decisiones para el usuario como por ejemplo, llegas a una bosque con dos caminos, uno esta lleno de ruidos de bestias y en el otro se dice que hay bandidos, debes dejar la historia a ese punto y permitir que el usuario tome la decisión, la cual debe ser relevante para la historia. Para crear la historia debes  tener en cuenta las siguientes reglas para crear una buena historia:\n",
+    "                1. Usa el genero que se te indique en los requerimientos, debes ceñirte muy bien a las características de dicho genero para crear la historia, es decir, los cuentos se caracterizan por tener introducción, nudo y desenlace, por lo que debes estructurar la historia de la manera correcta, si el género no es especificado, debes tener en cuenta los demás requerimientos para escoger un género con el fin de crear una historia interesante, puedes tener en cuenta aspectos como ambientación, personajes, sentimiento deseado a transmitir, etc.\n",
+    "                2. Ten presente la extensión que se pide para crear la historia, si esta no es especificada, crea la historia con un rango de 300 a 800 palabras.\n",
+    "                3. Asegúrate de mantener coherencia narrativa y estructural entre los hechos de la historia, conversaciones, personajes y demás.\n",
+    "                4. Debes tener en cuenta los personajes que se piden en la historia, recuerda crearlos con respecto a su personalidad, cualidadades y caracteristicas establecidas desde el inicio, estas no deben cambiar a no ser de que la historia lo requiera, por ejemplo, en caso de que un personaje requiera un desarrollo o un cambio debido a los hechos ocurridos. si  no se especifican los personajes o parte de sus caracteristicas, crea personajes coherentes con los demás aspectos de la historia, adicionalmente asegúrate de crear conversaciones coherentes con la historia, características y personalidades de los personajes.\n",
+    "                5. Con respecto al escenario, comienza a generar la historia a partir del escenario pedido, en caso de no ser pedido usa el escenario que mejor se acomode a la historia.\n",
+    "                6. Ten en cuenta los elementos de la trama pedidos como: Tipo de conflicto, obstáculos, estilo de resolución, ya que esto es importante para que estructures la historia, especialmente con la extensión de esta para que se puedan incluir y desarrollarse todos los elementos de la manera correcta.\n",
+    "                7. Toma en cuenta el tono y el sentimiento que se quiere conseguir con la historia, es decir, si  se pide que la historia tenga tono humorístico, dramático o satírico, debes incluirlo en la historia al igual que el sentimiento que se quiere expresar.\n",
+    "                Solo responde con el título y la historia creada, en caso de que se pida una conclusión o moraleja también puedes darla, solo danos el texto plano sin caracteres extraños como para especificar negritas tipo (** **), dado esto genera un JSON siguiendo la forma descrita abajo. No agregue ningún atributo que no aparezca en el esquema que se muestra a continuación.\n",
+    "                ```python\n",
+    "                {{\n",
+    "                    titulo: string  # Título de la historia\n",
+    "                    historia: string  # Texto de la historia\n",
+    "                }}.\n",
+    "                ```\n",
+    "                los requerimientos para la historia son los siguientes:\"\"\""
    ]
   }
  ],
