pruebas para generar imagenes

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -27,6 +27,268 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "34b30512",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AI Studio status: 200\n",
+      "✅ Tu API key funciona con AI Studio/Gemini\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "# Verificar si tu API key funciona con AI Studio (Gemini)\n",
+    "def test_ai_studio():\n",
+    "    api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "    url = f\"https://generativelanguage.googleapis.com/v1beta/models?key={api_key}\"\n",
+    "    \n",
+    "    response = requests.get(url)\n",
+    "    print(f\"AI Studio status: {response.status_code}\")\n",
+    "    if response.status_code == 200:\n",
+    "        print(\"✅ Tu API key funciona con AI Studio/Gemini\")\n",
+    "        return True\n",
+    "    else:\n",
+    "        print(\"❌ Tu API key no funciona con AI Studio\")\n",
+    "        return False\n",
+    "\n",
+    "test_ai_studio()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "294d6ff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt generado: Ethereal fantasy art. Gnarled, glowing tree in haunted forest, offering a shimmering orb. Dark, ominous atmosphere. Price visible as shadowy figures.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Usar Gemini para crear prompts inteligentes para imágenes\n",
+    "def generate_image_prompt_with_gemini(story_data):\n",
+    "    llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", api_key=os.getenv(\"GOOGLE_API_KEY\"), temperature=0.8)\n",
+    "    \n",
+    "    prompt = f\"\"\"\n",
+    "    Basándote en esta historia: \"{story_data['historia']}\"\n",
+    "    \n",
+    "    Crea un prompt en inglés para generar una imagen que represente la escena más importante de la historia.\n",
+    "    El prompt debe:\n",
+    "    1. Ser descriptivo y específico\n",
+    "    2. Incluir el estilo artístico (fantasy art, digital painting, etc.)\n",
+    "    3. Mencionar colores, atmósfera y elementos visuales clave\n",
+    "    4. Ser máximo 200 caracteres\n",
+    "    \n",
+    "    Responde SOLO con el prompt en inglés, nada más.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    response = llm.invoke(prompt)\n",
+    "    return response.content.strip()\n",
+    "\n",
+    "# Probar\n",
+    "story_example = {\n",
+    "    \"titulo\": \"El Árbol de los Deseos\",\n",
+    "    \"historia\": \"En un bosque encantado había un árbol mágico que concedía deseos, pero cada deseo tenía un precio terrible...\"\n",
+    "}\n",
+    "\n",
+    "image_prompt = generate_image_prompt_with_gemini(story_example)\n",
+    "print(f\"Prompt generado: {image_prompt}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf69204c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imagen generada: generated_image.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Usar el prompt con Hugging Face API (gratuito)\n",
+    "def generate_image_with_prompt(prompt):\n",
+    "    import requests\n",
+    "    \n",
+    "    API_URL = \"https://api-inference.huggingface.co/models/stabilityai/stable-diffusion-xl-base-1.0\"\n",
+    "    headers = {\"Authorization\": \"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\"}  # Token gratuito de Hugging Face\n",
+    "    \n",
+    "    def query(payload):\n",
+    "        response = requests.post(API_URL, headers=headers, json=payload)\n",
+    "        return response.content\n",
+    "    \n",
+    "    image_bytes = query({\n",
+    "        \"inputs\": prompt,\n",
+    "    })\n",
+    "    \n",
+    "    # Guardar imagen\n",
+    "    with open(\"generated_image.png\", \"wb\") as f:\n",
+    "        f.write(image_bytes)\n",
+    "    \n",
+    "    return \"generated_image.png\"\n",
+    "\n",
+    "# Uso combinado\n",
+    "image_file = generate_image_with_prompt(image_prompt)\n",
+    "print(f\"Imagen generada: {image_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bcc5c879",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Token inválido: 401\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def test_huggingface_token():\n",
+    "    token = \"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\"  # Reemplaza con tu token real\n",
+    "    \n",
+    "    headers = {\"Authorization\": f\"Bearer {token}\"}\n",
+    "    \n",
+    "    # Probar acceso a la API\n",
+    "    response = requests.get(\"https://huggingface.co/api/whoami\", headers=headers)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        user_info = response.json()\n",
+    "        print(f\"✅ Token válido para usuario: {user_info['name']}\")\n",
+    "        return True\n",
+    "    else:\n",
+    "        print(f\"❌ Token inválido: {response.status_code}\")\n",
+    "        return False\n",
+    "\n",
+    "# Probar\n",
+    "test_huggingface_token()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "01eb43a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Imagen generada exitosamente\n",
+      "Imagen guardada: generated_image.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_image_pollinations(prompt):\n",
+    "    import requests\n",
+    "    from urllib.parse import quote\n",
+    "    \n",
+    "    # Codificar prompt para URL\n",
+    "    encoded_prompt = quote(prompt)\n",
+    "    \n",
+    "    # URL de la API gratuita\n",
+    "    url = f\"https://image.pollinations.ai/prompt/{encoded_prompt}\"\n",
+    "    \n",
+    "    try:\n",
+    "        response = requests.get(url)\n",
+    "        \n",
+    "        if response.status_code == 200:\n",
+    "            # Guardar imagen\n",
+    "            with open(\"generated_image.png\", \"wb\") as f:\n",
+    "                f.write(response.content)\n",
+    "            \n",
+    "            print(\"✅ Imagen generada exitosamente\")\n",
+    "            return \"generated_image.png\"\n",
+    "        else:\n",
+    "            print(f\"❌ Error: {response.status_code}\")\n",
+    "            return None\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "# Probar con tu prompt generado por Gemini\n",
+    "image_file = generate_image_pollinations(image_prompt)\n",
+    "print(f\"Imagen guardada: {image_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "63f5b011",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_image_with_prompt_debug(prompt):\n",
+    "    import requests\n",
+    "    \n",
+    "    API_URL = \"https://api-inference.huggingface.co/models/stabilityai/stable-diffusion-xl-base-1.0\"\n",
+    "    headers = {\"Authorization\": \"Bearer hf_XXXX\"}  # Necesitas un token real de Hugging Face\n",
+    "    \n",
+    "    def query(payload):\n",
+    "        response = requests.post(API_URL, headers=headers, json=payload)\n",
+    "        return response\n",
+    "    \n",
+    "    response = query({\n",
+    "        \"inputs\": prompt,\n",
+    "    })\n",
+    "    \n",
+    "    print(f\"Status Code: {response.status_code}\")\n",
+    "    print(f\"Headers: {response.headers}\")\n",
+    "    \n",
+    "    # Verificar si la respuesta es una imagen\n",
+    "    if response.headers.get('content-type', '').startswith('image/'):\n",
+    "        print(\"✅ Respuesta es una imagen\")\n",
+    "        with open(\"generated_image.png\", \"wb\") as f:\n",
+    "            f.write(response.content)\n",
+    "        return \"generated_image.png\"\n",
+    "    else:\n",
+    "        print(\"❌ Respuesta NO es una imagen\")\n",
+    "        print(f\"Contenido: {response.text}\")\n",
+    "        return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "35977a56",
    "metadata": {},
