generacion de imagen

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -27,53 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "34b30512",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AI Studio status: 200\n",
-      "✅ Tu API key funciona con AI Studio/Gemini\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import requests\n",
-    "\n",
-    "# Verificar si tu API key funciona con AI Studio (Gemini)\n",
-    "def test_ai_studio():\n",
-    "    api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
-    "    url = f\"https://generativelanguage.googleapis.com/v1beta/models?key={api_key}\"\n",
-    "    \n",
-    "    response = requests.get(url)\n",
-    "    print(f\"AI Studio status: {response.status_code}\")\n",
-    "    if response.status_code == 200:\n",
-    "        print(\"✅ Tu API key funciona con AI Studio/Gemini\")\n",
-    "        return True\n",
-    "    else:\n",
-    "        print(\"❌ Tu API key no funciona con AI Studio\")\n",
-    "        return False\n",
-    "\n",
-    "test_ai_studio()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "294d6ff7",
    "metadata": {},
    "outputs": [
@@ -81,7 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prompt generado: Ethereal fantasy art. Gnarled, glowing tree in haunted forest, offering a shimmering orb. Dark, ominous atmosphere. Price visible as shadowy figures.\n"
+      "Prompt generado: A gnarled, glowing tree in a dark, enchanted forest. A figure begs with outstretched hands. Ominous shadows & swirling magic. Fantasy art.\n"
      ]
     }
    ],
@@ -118,93 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf69204c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imagen generada: generated_image.png\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Usar el prompt con Hugging Face API (gratuito)\n",
-    "def generate_image_with_prompt(prompt):\n",
-    "    import requests\n",
-    "    \n",
-    "    API_URL = \"https://api-inference.huggingface.co/models/stabilityai/stable-diffusion-xl-base-1.0\"\n",
-    "    headers = {\"Authorization\": \"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\"}  # Token gratuito de Hugging Face\n",
-    "    \n",
-    "    def query(payload):\n",
-    "        response = requests.post(API_URL, headers=headers, json=payload)\n",
-    "        return response.content\n",
-    "    \n",
-    "    image_bytes = query({\n",
-    "        \"inputs\": prompt,\n",
-    "    })\n",
-    "    \n",
-    "    # Guardar imagen\n",
-    "    with open(\"generated_image.png\", \"wb\") as f:\n",
-    "        f.write(image_bytes)\n",
-    "    \n",
-    "    return \"generated_image.png\"\n",
-    "\n",
-    "# Uso combinado\n",
-    "image_file = generate_image_with_prompt(image_prompt)\n",
-    "print(f\"Imagen generada: {image_file}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "bcc5c879",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ Token inválido: 401\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def test_huggingface_token():\n",
-    "    token = \"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\"  # Reemplaza con tu token real\n",
-    "    \n",
-    "    headers = {\"Authorization\": f\"Bearer {token}\"}\n",
-    "    \n",
-    "    # Probar acceso a la API\n",
-    "    response = requests.get(\"https://huggingface.co/api/whoami\", headers=headers)\n",
-    "    \n",
-    "    if response.status_code == 200:\n",
-    "        user_info = response.json()\n",
-    "        print(f\"✅ Token válido para usuario: {user_info['name']}\")\n",
-    "        return True\n",
-    "    else:\n",
-    "        print(f\"❌ Token inválido: {response.status_code}\")\n",
-    "        return False\n",
-    "\n",
-    "# Probar\n",
-    "test_huggingface_token()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "01eb43a5",
    "metadata": {},
    "outputs": [
@@ -249,42 +117,6 @@
     "# Probar con tu prompt generado por Gemini\n",
     "image_file = generate_image_pollinations(image_prompt)\n",
     "print(f\"Imagen guardada: {image_file}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "63f5b011",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_image_with_prompt_debug(prompt):\n",
-    "    import requests\n",
-    "    \n",
-    "    API_URL = \"https://api-inference.huggingface.co/models/stabilityai/stable-diffusion-xl-base-1.0\"\n",
-    "    headers = {\"Authorization\": \"Bearer hf_XXXX\"}  # Necesitas un token real de Hugging Face\n",
-    "    \n",
-    "    def query(payload):\n",
-    "        response = requests.post(API_URL, headers=headers, json=payload)\n",
-    "        return response\n",
-    "    \n",
-    "    response = query({\n",
-    "        \"inputs\": prompt,\n",
-    "    })\n",
-    "    \n",
-    "    print(f\"Status Code: {response.status_code}\")\n",
-    "    print(f\"Headers: {response.headers}\")\n",
-    "    \n",
-    "    # Verificar si la respuesta es una imagen\n",
-    "    if response.headers.get('content-type', '').startswith('image/'):\n",
-    "        print(\"✅ Respuesta es una imagen\")\n",
-    "        with open(\"generated_image.png\", \"wb\") as f:\n",
-    "            f.write(response.content)\n",
-    "        return \"generated_image.png\"\n",
-    "    else:\n",
-    "        print(\"❌ Respuesta NO es una imagen\")\n",
-    "        print(f\"Contenido: {response.text}\")\n",
-    "        return None\n"
    ]
   },
   {
